gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-concat_idents2.rs
fn main() {
    concat_idents!(a, b); // { dg-error ".E0425." "" { target *-*-* } }
// { dg-error ".E0425." "" { target *-*-* } .-2 }
}

